<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_choose_coffee"
        android:text="@string/title_choose_coffee"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_weight="1"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <RadioButton android:id="@+id/espresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espresso"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/latte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latte"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/cappuccino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cappuccino"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:weightSum="5">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/letsGoButton"
            android:text="@string/letsGo"
            android:layout_gravity="center"
            android:enabled="false"
            android:layout_weight="3"
            android:onClick="onLetsGoButtonClicked"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>